# Set library name
set(LIBNAME DiKErnel.Util)

# Set folder names
set(PUBLIC_FOLDER Public)
set(PUBLIC_HELPERS_FOLDER ${PUBLIC_FOLDER}/Helpers)
set(PUBLIC_VALIDATION_FOLDER ${PUBLIC_FOLDER}/Validation)

# Define sources
set(SOURCEFILES_PUBLIC
  ${PUBLIC_FOLDER}/DataResult.h
  ${PUBLIC_FOLDER}/Event.cpp
  ${PUBLIC_FOLDER}/Event.h
  ${PUBLIC_FOLDER}/EventRegistry.cpp
  ${PUBLIC_FOLDER}/EventRegistry.h
  ${PUBLIC_FOLDER}/EventType.h
  ${PUBLIC_FOLDER}/SimpleResult.cpp
  ${PUBLIC_FOLDER}/SimpleResult.h
)

set(SOURCEFILES_PUBLIC_HELPERS
  ${PUBLIC_HELPERS_FOLDER}/UniquePtrHelper.h
)

SET(SOURCEFILES_PUBLIC_VALIDATION
  ${PUBLIC_VALIDATION_FOLDER}/ValidationIssue.cpp
  ${PUBLIC_VALIDATION_FOLDER}/ValidationIssue.h
  ${PUBLIC_VALIDATION_FOLDER}/ValidationIssueType.h
)

# Add library
add_library(${LIBNAME} STATIC
  ${SOURCEFILES_PUBLIC}
  ${SOURCEFILES_PUBLIC_HELPERS}
  ${SOURCEFILES_PUBLIC_VALIDATION}
)

# Configure folder structure
set_target_properties(${LIBNAME} PROPERTIES FOLDER Src)
source_group(${PUBLIC_FOLDER} FILES ${SOURCEFILES_PUBLIC})
source_group(${PUBLIC_HELPERS_FOLDER} FILES ${SOURCEFILES_PUBLIC_HELPERS})
source_group(${PUBLIC_VALIDATION_FOLDER} FILES ${SOURCEFILES_PUBLIC_VALIDATION})

# Expose header files
target_include_directories(${LIBNAME} PUBLIC
  ${CMAKE_CURRENT_SOURCE_DIR}/${PUBLIC_FOLDER}
  ${CMAKE_CURRENT_SOURCE_DIR}/${PUBLIC_HELPERS_FOLDER}
  ${CMAKE_CURRENT_SOURCE_DIR}/${PUBLIC_VALIDATION_FOLDER}
)