# Set executable name
set(EXENAME DiKErnel.DomainLibrary.Test)

# Set folder names
set(DEFAULTS_FOLDER Defaults)
set(DEFAULTS_ASPHALT_REVETMENT_WAVE_IMPACT_FOLDER ${DEFAULTS_FOLDER}/AsphaltRevetmentWaveImpact)
set(DEFAULTS_GRASS_REVETMENT_WAVE_IMPACT_FOLDER ${DEFAULTS_FOLDER}/GrassRevetmentWaveImpact)
set(DEFAULTS_GRASS_REVETMENT_WAVE_RUNUP_FOLDER ${DEFAULTS_FOLDER}/GrassRevetmentWaveRunup)
set(DEFAULTS_NATURAL_STONE_REVETMENT_FOLDER ${DEFAULTS_FOLDER}/NaturalStoneRevetment)
set(VALIDATORS_FOLDER Validators)

# Define sources
set(SOURCEFILES_ROOT
  ConstantsTest.cpp
  Main.cpp
)

set(SOURCEFILES_DEFAULTS
  ${DEFAULTS_FOLDER}/RevetmentDefaultsTest.cpp
)

set(SOURCEFILES_DEFAULTS_ASPHALT_REVETMENT_WAVE_IMPACT
  ${DEFAULTS_ASPHALT_REVETMENT_WAVE_IMPACT_FOLDER}/AsphaltRevetmentWaveImpactHydraulicAsphaltConcreteDefaultsTest.cpp
)

set(SOURCEFILES_DEFAULTS_GRASS_REVETMENT_WAVE_IMPACT
  ${DEFAULTS_GRASS_REVETMENT_WAVE_IMPACT_FOLDER}/GrassRevetmentWaveImpactClosedSodDefaultsTest.cpp
  ${DEFAULTS_GRASS_REVETMENT_WAVE_IMPACT_FOLDER}/GrassRevetmentWaveImpactOpenSodDefaultsTest.cpp
)

set(SOURCEFILES_DEFAULTS_GRASS_REVETMENT_WAVE_RUNUP
  ${DEFAULTS_GRASS_REVETMENT_WAVE_RUNUP_FOLDER}/GrassRevetmentWaveRunupClosedSodDefaultsTest.cpp
  ${DEFAULTS_GRASS_REVETMENT_WAVE_RUNUP_FOLDER}/GrassRevetmentWaveRunupOpenSodDefaultsTest.cpp
  ${DEFAULTS_GRASS_REVETMENT_WAVE_RUNUP_FOLDER}/GrassRevetmentWaveRunupRayleighClosedSodDefaultsTest.cpp
  ${DEFAULTS_GRASS_REVETMENT_WAVE_RUNUP_FOLDER}/GrassRevetmentWaveRunupRayleighOpenSodDefaultsTest.cpp
)

set(SOURCEFILES_DEFAULTS_NATURAL_STONE_REVETMENT
  ${DEFAULTS_NATURAL_STONE_REVETMENT_FOLDER}/NordicStoneRevetmentDefaultsTest.cpp
)

set(SOURCEFILES_VALIDATORS
  ${VALIDATORS_FOLDER}/ValidationIssueTest.cpp
)

# Add executable
add_executable(${EXENAME}
  ${SOURCEFILES_ROOT}
  ${SOURCEFILES_DEFAULTS}
  ${SOURCEFILES_DEFAULTS_ASPHALT_REVETMENT_WAVE_IMPACT}
  ${SOURCEFILES_DEFAULTS_GRASS_REVETMENT_WAVE_IMPACT}
  ${SOURCEFILES_DEFAULTS_GRASS_REVETMENT_WAVE_RUNUP}
  ${SOURCEFILES_DEFAULTS_NATURAL_STONE_REVETMENT}
  ${SOURCEFILES_VALIDATORS}
)

# Configure folder structure
set_target_properties(${EXENAME} PROPERTIES FOLDER Test)
source_group("" FILES ${SOURCEFILES_ROOT})
source_group(${DEFAULTS_FOLDER} FILES ${SOURCEFILES_DEFAULTS})
source_group(${DEFAULTS_ASPHALT_REVETMENT_WAVE_IMPACT_FOLDER} FILES ${SOURCEFILES_DEFAULTS_ASPHALT_REVETMENT_WAVE_IMPACT})
source_group(${DEFAULTS_GRASS_REVETMENT_WAVE_IMPACT_FOLDER} FILES ${SOURCEFILES_DEFAULTS_GRASS_REVETMENT_WAVE_IMPACT})
source_group(${DEFAULTS_GRASS_REVETMENT_WAVE_RUNUP_FOLDER} FILES ${SOURCEFILES_DEFAULTS_GRASS_REVETMENT_WAVE_RUNUP})
source_group(${DEFAULTS_NATURAL_STONE_REVETMENT_FOLDER} FILES ${SOURCEFILES_DEFAULTS_NATURAL_STONE_REVETMENT})
source_group(${VALIDATORS_FOLDER} FILES ${SOURCEFILES_VALIDATORS})

# Link dependencies
target_link_libraries(${EXENAME} gtest DiKErnel.DomainLibrary DiKErnel.TestUtil)